syntax = "proto3";

package api;

option java_package = "com.span_tester.grpc";
option java_multiple_files = true;

message AppAnnotationParams{
    string ID = 1;
    string ProcessPath = 2;
    int64 PID = 3;
    string SpanName = 4;
    string DomainName = 5;
    string FileField = 6;
    string FileValue= 7;
}

message ParseAppAnnotationParams{
    repeated AppAnnotationParams Params = 1;
}

message ParseAppAnnotationMessage {
    string Status = 1;
}

service SecurityModule {
    rpc ParseAppAnnotation(ParseAppAnnotationParams) returns (ParseAppAnnotationMessage) {}
}
